# dicey

./: .gitignore  docker-compose.yml
api/: Dockerfile  README.md  application.py  boot.sh  config.py  gunicorn.ini  pyproject.toml  requirements.txt
api/app/: __init__.py
api/app/api/: __init__.py  init.py
api/app/models/: users.py
api/app/utils/: __init__.py
api/migrations/: alembic.ini
client/: Dockerfile  package-lock.json
